--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
   <main>
     <section id="about-us" class="about">
       <div class="about__main">
-        <img class="about__img" src="./img/adri-3.png" alt="Mujer hablando con pasión a micrófono">
+        <div class="about__person">
+          <div class="about__person-container">
+            <img class="about__person-circle" src="./img/background-popup.jpg" alt="Imagen decorativa de fondo con vegetación">
+            <img class="about__person-img" src="./img/adri-2.png" alt="Adri contenta agarrando un micrófono">
+          </div>
+        </div>
         <div class="about__text">
           <h2>Sobre nosotros</h2>
           <h5>La Radio del <span class="hero__span">Pueblo</span></h5>
@@ -107,6 +112,22 @@
     <!-- Seccion fotos -->
     <section id="fotos" class="fotos">
       <h2 class="fotos__titulo">Fotos</h2>
+      <div class="fotos__wrapper">
+        <div class="fotos__box-area">
+          <div class="fotos__box1">
+            <img src="./img/adri-con-achaval.jpeg" alt="Adriana Garcia sosteniendo un cuadro de San Martin junto a Achaval">
+          </div>
+          <div class="fotos__box2">
+            <img src="./img/adri-con-gonzalito.jpeg" alt="Adriana Garcia junto a Gonzalo Rodriguez brindando">
+          </div>
+          <div class="fotos__box3">
+            <img src="./img/adri-con-cristina.jpeg" alt="Adriana Garcia junto a Nestor Kirchner rodeada de gente">
+          </div>
+          <div class="fotos__box4">
+            <img src="./img/adri-con-nestor.jpeg" alt="Adriana Garcia junto a Christina Kirchner">
+          </div>
+        </div>
+      </div>
       <div class="fotos__grid">
         <img src="./img/1.jpg">
         <img src="./img/2.jpg">
