Se esta terminando las secciones

--- a/index.html
+++ b/index.html
@@ -215,10 +215,13 @@
         <div class="videos__cont-titulo">
           <h2 class="videos__titulo">Audioteca</h2>
         </div>
-        <article>
-          <h3>Te presento mi sección de cuentos</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi soluta id iste deserunt sequi sunt inventore? Inventore perspiciatis quisquam incidunt ex similique a animi quam voluptates distinctio totam. Minus, tempore.</p>
-        </article>
+        <div class="audioteca__cont-img-texto">
+          <article class="audioteca__article">
+            <img class="audioteca__article-img" src="./img/libro-mano.png" alt="Una persona teniendo un libro">
+            <h3 class="audioteca__article-h3">Te presento mi sección de cuentos</h3>
+            <p class="audioteca__article-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam cumque earum dignissimos id aut aspernatur, minus nisi eligendi sequi consequuntur porro quisquam hic reprehenderit tempora soluta exercitationem pariatur. Magnam, quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi soluta id iste deserunt sequi sunt inventore? Inventore perspiciatis quisquam incidunt ex similique a animi quam voluptates distinctio totam. Minus, tempore.</p>
+          </article>
+        </div>
       </div>
       <div class="audioteca__cont-players">
         <div class="audioteca__player">
