--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -37,12 +35,15 @@
   <main>
     <!-- Sección Portada -->
     <section class="portada">
-      <div class="portada__cont-titulo"></div>
-      <span>Te invito a recorrer mi historia</span>
+      <div class="portada__cont-type">
+        <span>Yo soy <span class="portada__multitext"></span></span>
+      </div>
+      <span class="portada__frase">"De la conducta de <span>uno</span> depende el futuro de <span>todos</span>"</span>
+      <span class="portada__te-invito">Te invito a recorrer mi historia</span>
       <a href="#about-us" class="portada__arrow-container">
         <div class="portada__arrow"></div>
       </a>
-      <img class="portada__img" src="./img/adri-circulo.png" alt="Mujer contenta con brazos estirados">
+      <div class="portada__img">
     </section>
     <!-- Sección Quienes somos -->
     <section id="about-us" class="about">
@@ -406,6 +407,17 @@
   <script src="./js/app.js"></script>
   <script>
     AOS.init();
+  </script>
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+  <script>
+    var typingEffect = new Typed (".portada__multitext", {
+      strings : ["locutora","youtuber","influencer","apasionada","dedicada"],
+      loop : true,
+      typeSpeed: 100,
+      backSpeed: 80, 
+      startDelay: 800,
+      backDelay: 800
+    })
   </script>
 </body>
 
