Se modifica publicidades

--- a/index.html
+++ b/index.html
@@ -368,6 +368,34 @@
           </div>
         </div>
 
+        <div class="card--8">
+          <img src="./img/ad-8.jpg" class="img" alt="Pizzeria ¡Que Locura!">
+
+          <div class="text">
+            <p class="h3"> Pizza ¡Que Locura! </p>
+            <p class="p"> Delviso </p>
+
+            <div class="icon-box">
+              <p class="span">Pizzeria
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card--9">
+          <img src="./img/ad-9.jpg" class="img" alt="Pizzeria ¡Que Locura!">
+
+          <div class="text">
+            <p class="h3"> Multiplex Palmas Del Pilar </p>
+            <p class="p"> Pilar </p>
+
+            <div class="icon-box">
+              <p class="span">Cine
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <div class="custom-shape-divider-bottom-1684252060">
