Se continua con secciones

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             poder adentrarte en mi mundo, conocerme un poco más y descubrir las <strong>pasiones</strong> que me
             <strong>impulsan</strong> en cada paso que doy frente al micrófono y la vida.
           </p>
-          <button class="btn"><a href="#">Escuchame en <i class="fa fa-facebook"></i></a></button>
+          <div class="about__cont-btn-texto">
+            <button class="btn"><a href="#">Escuchame en <i class="fa fa-facebook"></i></a></button>
+            <span>Todos los <strong>martes</strong> a las <strong>19:00hs</strong> y los <strong>jueves</strong> a las <strong>15:00hs</strong> por radio pilar 88.0 FM</span>
+          </div>
         </div>
       </div>
       <div class="about__socials">
@@ -73,6 +76,11 @@
           <li class="about__socials-youtube"><a href="#"><i class="fa fa-youtube-play"></i></a></li>
           <li class="about__socials-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
         </ul>
+      </div>
+      <div class="about__body-flechas">
+        <div class="about__cont-flechas">
+          <a href="#videos"><span></span></a>
+        </div>
       </div>
     </section>
 
@@ -95,6 +103,7 @@
         <div class="videos__cont-titulo">
           <h2 class="videos__titulo">Videos</h2>
         </div>
+        <img class="videos__sticker-adri" src="./img/sticker-1.png" alt="Sticker Adri tomando cafe">
         <div class="videos__cont-vid">
           <figure class="videos__cont-text-vid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/-xvnPEDzJjc"
@@ -151,6 +160,9 @@
       <div class="videos__cont-titulo">
         <h2 class="videos__titulo">Fotos</h2>
       </div>
+      <img class="fotos__giff-camara" src="./video/otto-gifs.gif" alt="giff camara de fotos">
+      <span class="fotos__dicho">"Cada foto es un fragmento de <span>tiempo</span> suspendido, una <span>pincelada</span> más en el lienzo..."</span>
+      <span class="fotos__dicho-2">"...que perdura y nos permite <span>abrazar</span> los <span>recuerdos</span> con la mirada."</span>
       <div class="fotos__fondo-cubo">
         <div class="fotos__wrapper">
           <div class="fotos__box-area">
@@ -170,6 +182,9 @@
           </div>
         </div>
       </div>
+      <div class="fotos__cont-h3-expandible">
+        <h3>Galeria expandible</h3>
+      </div>
       <article class="fotos__container">      
         <div class="fotos__gallery-wrap">
           <div class="fotos__item fotos__item-1"><h3>Dia</h3><p>Este dua Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, quibusdam! Commodi dolor ipsam nesciunt necessitatibus asperiores saepe quisquam, modi non placeat quidem repudiandae laudantium repellendus, aliquid nam a beatae.</p></div>
@@ -179,6 +194,10 @@
           <div class="fotos__item fotos__item-5"><h3>Dia</h3><p>Este dua Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, quibusdam! Commodi dolor ipsam nesciunt necessitatibus asperiores saepe quisquam, modi non placeat quidem repudiandae laudantium repellendus, aliquid nam a beatae.</p></div>
         </div>
       </article>
+      <div class="fotos__cont-subtitulo">
+        <h3>Carrousel de fotos</h3>
+        <span>Seleccioná una para leer su descripción</span>
+      </div>
       <div class="fotos__fondo-slider">
         <div class="fotos__body-slider">
           <div class="fotos__slider">
@@ -224,6 +243,7 @@
           </article>
         </div>
       </div>
+      <img class="audioteca__sticker" src="./img/sticker-2.png" alt="Sticker adri riendose">
       <div class="audioteca__cont-players">
         <div class="audioteca__player">
           <div class="audioteca__imgbox">
@@ -270,7 +290,7 @@
       <div class="videos__cont-titulo">
         <h2 class="videos__titulo">Publicidad</h2>
       </div>
-
+      <img class="publicidad__fondo-chispas" src="./img/back-publ.png" alt="Fondo de chispas">
       <div class="publicidad__cont-tarj">
         <div class="card">
           <img src="./img/ad-1.jpg" class="img" alt="Empresa Los Jazmines de eventos">
@@ -359,7 +379,7 @@
 
           <div class="text">
             <p class="h3"> Club Municipal </p>
-            <p class="p"> Delviso </p>
+            <p class="p"> Del viso </p>
 
             <div class="icon-box">
               <p class="span">Deportes
@@ -373,7 +393,7 @@
 
           <div class="text">
             <p class="h3"> Pizza ¡Que Locura! </p>
-            <p class="p"> Delviso </p>
+            <p class="p"> Del viso </p>
 
             <div class="icon-box">
               <p class="span">Pizzeria
@@ -439,7 +459,7 @@
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>
     var typingEffect = new Typed (".portada__multitext", {
-      strings : ["locutora","youtuber","influencer","apasionada","dedicada"],
+      strings : ["locutora","periodista","comunicadora","coordinadora"],
       loop : true,
       typeSpeed: 100,
       backSpeed: 80, 
