Se agrega open graph

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Adentrate en la trayectoria de Adriana. Una apasionada locutora, comunicadora social, organizadora de eventos y periodista. Explorá su mundo a través de fotos y videos ¡Dejate cautivar por su talento y su historia!">
+  <meta property="og:title" content="Página Oficial | Adriana García">
+  <meta property="og:type" content="Blog">
+  <meta property="og:url" content="https://nicolasjnunez.github.io/Radio-FM-88.9/">
+  <meta property="og:image" content="https://github.com/NicolasJNunez/Radio-FM-88.9/blob/main/img/adri-muneco.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -15,8 +20,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="icon" href="./img/favicono.ico">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Document</title>
+  <title>Página Oficial | Adriana García</title>
 </head>
 
 <body>
