Se corrige meta tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Página Oficial | Adriana García">
   <meta property="og:type" content="Blog">
   <meta property="og:url" content="https://nicolasjnunez.github.io/Radio-FM-88.9/">
-  <meta property="og:image" content="https://github.com/NicolasJNunez/Radio-FM-88.9/blob/main/img/adri-muneco.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/NicolasJNunez/Radio-FM-88.9/main/img/adri-muneco.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
