Se agregan meta titles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:type" content="Blog">
   <meta property="og:url" content="https://nicolasjnunez.github.io/Radio-FM-88.9/">
   <meta property="og:image" content="https://raw.githubusercontent.com/NicolasJNunez/Radio-FM-88.9/main/img/adri-muneco.jpg">
+  <meta property="og:description" content="Adentrate en la trayectoria de Adriana. Una apasionada locutora, comunicadora social, organizadora de eventos y periodista. Explorá su mundo a través de fotos y videos ¡Dejate cautivar por su talento y su historia!">
+  <meta property="og:site_name" content="Página Oficial | Adriana García">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
