Se arregla responsive de about us

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="about__text">
-          <h2>Sobre Mí</h2>
+          <h2 class="about__title">Sobre Mí</h2>
           <h5><span class="about__vineta">❖</span>Me dicen <span class="hero__span">Chispita</span></h5>
           <p>Esta página es un pedacito de mi <strong>esencia</strong> que quiero compartir con <strong>vos</strong>.
             Aquí vas a encontrar un <i>recorrido visual</i> por mi trayectoria, donde las fotografías y los videos capturan
