Se termina responsive videos

--- a/index.html
+++ b/index.html
@@ -171,13 +171,14 @@
                 <h3>La <span>Señora</span> del <span>Anillo</span> 💍</h3>
                 <p>Escuchá la increíble historia del posible anillo de <strong>San Martín</strong> que encontramos en La
                   Posta Pinazo. <span class="contraste">Mario Markic</span> nos revela los detalles de este hallazgo
-                  histórico, desde las iniciales grabadas en el anillo hasta su conexión con el famoso combate de
-                  <strong>San Lorenzo</strong>. Enganchate en esta emocionante narrativa llena de <i>misterio</i> y
+                  histórico, desde las iniciales grabadas en el anillo hasta su conexión con el combate de
+                  <strong>San Lorenzo</strong>. Enganchate en esta narrativa llena de <i>misterio</i> y
                   <i>valor histórico</i>.</p>
+                  <a href="https://www.youtube.com/watch?v=-xvnPEDzJjc" target="_blank" class="btn">Ir al video <i
+                    class="bi bi-box-arrow-up-right"></i></a>
               </figcaption>
             </figure>
-            <a href="https://www.youtube.com/watch?v=-xvnPEDzJjc" target="_blank" class="btn">Ir al video <i
-                class="bi bi-box-arrow-up-right"></i></a>
+            
           </div>
           <div class="videos__cont-text-vid">
             <figure>
@@ -186,16 +187,16 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
               <figcaption>
-                <h3><span>Radio</span> Más Pilar <span>FM 88.9</span> 📻</h3>
+                <h3><span>Radio</span> Pilar <span>FM 88.9</span> 📻</h3>
                 <p>Sintonizá la <i>mejor radio</i> de Pilar. En este programa apasionante que conduzco, los oyentes
                   participan a través de <strong>llamadas telefónicas</strong> y nos comparten sus
                   <strong>opiniones</strong>. <i>Auspiciantes</i> reconocidos, transmisión en vivo y la promoción del
                   <span class="contraste">involucramiento vecinal</span>. Descubrí el <strong>valor cultural</strong> en
-                  nuestra sociedad.</p>
+                  nuestra sociedad <i>¡Sumate!</i></p>
+                  <a href="https://www.youtube.com/@radiomaspilar6928" target="_blank" class="btn">Ir a Radio Más Pilar <i
+                    class="bi bi-box-arrow-up-right"></i></a>
               </figcaption>
             </figure>
-            <a href="https://www.youtube.com/@radiomaspilar6928" target="_blank" class="btn">Ir a Radio Más Pilar <i
-                class="bi bi-box-arrow-up-right"></i></a>
           </div>
           <div class="videos__cont-text-vid">
             <figure>
@@ -204,16 +205,16 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
               <figcaption>
-                <h3>Celebración en <span>Del Viso</span> 🎉</h3>
+                <h3>Celebración <span>Del Viso</span> 🎉</h3>
                 <p>Del Viso cumplió <strong>111 años</strong> y el festejó se llevo a cabo en un restaurante del pueblo.
                   A pesar de las complicaciones que nos trajo la <i>pandemia</i>, hubo música, homenajes y gran
                   <strong>contribución colectiva</strong>. Destacaron miembros locales y se habló de <strong>proyectos
                     futuros</strong> para unir aún más a la <span class="contraste">comunidad</span>. ¡Descubrí todo en
                   nuestro video!</p>
+                  <a href="https://www.youtube.com/watch?v=0vxY73w4Fec" target="_blank" class="btn">Ir al video <i
+                    class="bi bi-box-arrow-up-right"></i></a>
               </figcaption>
             </figure>
-            <a href="https://www.youtube.com/watch?v=0vxY73w4Fec" target="_blank" class="btn">Ir al video <i
-                class="bi bi-box-arrow-up-right"></i></a>
           </div>
         </div>
       </div>
