Se termina responsive de publicidad

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
         <a class="card--2" href="./img/ad-2.jpg" data-lightbox="publi"
           data-title="Taller de Alineación Matias Carbajal">
-          <img src="./img/ad-2.jpg" class="img--2" alt="Taller de alineacion Matias Carabajal">
+          <img src="./img/ad-2.jpg" class="img" alt="Taller de alineacion Matias Carabajal">
 
           <div class="text">
             <p class="h3"> Matias Carabajal </p>
