--- a/index.html
+++ b/index.html
@@ -262,13 +262,12 @@
       <span class="fotos__dicho-2">"...que perdura y nos permite <span>abrazar</span> los <span>recuerdos</span> con la
         mirada."</span>
       <div class="fotos__cont-h3-expandible">
-        <h3>Galeria expandible</h3>
+        <h3>Galería <span>expandible</span></h3>
       </div>
       <div class="fotos__container">
         <div class="fotos__gallery-wrap">
           <div class="fotos__item fotos__item-1">
-            <p>En <i>reconocimiento</i> por el <span class="subr2">notable</span> descubrimiento histórico, fuí <strong>galardonada</strong> con la
-              <i>medalla</i> al <span class="backgr">Mérito</span> por la <span class="colo">Unidad Nacional de Granaderos a Caballos</span> de la <strong>Nación Argentina</strong>.</p>
+            <p>Fuí <i>destacada</i> con la <span class="subr2">medalla de honor</span> por el Senado de la provincia de <strong>Buenos Aires</strong> por ser <span class="backgr">defensora</span> de la <span class="colo">Ley de Medios y el Medioambiente</span>.</p>
           </div>
           <div class="fotos__item fotos__item-2">
             <p>Fuí <span class="subr2">destacada</span> periodista <strong>internacional</strong>, reconocida por mi <i>trayectoria</i> y <i>membresía</i> en la <span class="colo">FELAP</span>, cubriendo eventos <strong>nacionales</strong> de relevancia.</p>
