--- a/index.html
+++ b/index.html
@@ -200,18 +200,11 @@
           </div>
           <div class="videos__cont-text-vid">
             <figure>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/0vxY73w4Fec"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/7VL78LxuFrs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               <figcaption>
-                <h3>Celebración <span>Del Viso</span> 🎉</h3>
-                <p>Del Viso cumplió <strong>111 años</strong> y el festejó se llevo a cabo en un restaurante del pueblo.
-                  A pesar de las complicaciones que nos trajo la <i>pandemia</i>, hubo música, homenajes y gran
-                  <strong>contribución colectiva</strong>. Destacaron miembros locales y se habló de <strong>proyectos
-                    futuros</strong> para unir aún más a la <span class="contraste">comunidad</span>. ¡Descubrí todo en
-                  nuestro video!</p>
-                  <a href="https://www.youtube.com/watch?v=0vxY73w4Fec" target="_blank" class="btn">Ir al video <i
+                <h3>Una <span>Navidad</span> distinta 🎁</h3>
+                <p>En Del Viso lideramos una <strong>propuesta</strong> <i>conmovedora</i> para brindar una Navidad <strong>especial</strong> a los niños más pequeños. Se donaron juguetes y juntos creamos momentos de <strong>alegría</strong> para aquellos que más lo <strong>necesitaban</strong>. La <span class="contraste">caravana festiva</span> fué todo un éxito, compartiendo emociones en un recorrido lleno de música y diversión.</p>
+                  <a href="https://www.youtube.com/watch?v=7VL78LxuFrs&t=33s" target="_blank" class="btn">Ir al video <i
                     class="bi bi-box-arrow-up-right"></i></a>
               </figcaption>
             </figure>
