Se cambian parrafos seccion fotos

--- a/index.html
+++ b/index.html
@@ -260,19 +260,19 @@
       <div class="fotos__container">
         <div class="fotos__gallery-wrap">
           <div class="fotos__item fotos__item-1">
-            <p>Fuí <i>destacada</i> con la <span class="subr2">medalla de honor</span> por el Senado de la provincia de <strong>Buenos Aires</strong> por ser <span class="backgr">defensora</span> de la <span class="colo">Ley de Medios y el Medioambiente</span>.</p>
+            <p>Fuí <i>destacada</i> con la <span class="subr2">Medalla de Honor</span> por el Senado de la provincia de <strong>Buenos Aires</strong> por ser <span class="backgr">Defensora</span> de la <span class="colo">Ley de Medios y el Medioambiente</span>.</p>
           </div>
           <div class="fotos__item fotos__item-2">
-            <p>Fuí <span class="subr2">destacada</span> periodista <strong>internacional</strong>, reconocida por mi <i>trayectoria</i> y <i>membresía</i> en la <span class="colo">FELAP</span>, cubriendo eventos <strong>nacionales</strong> de relevancia.</p>
+            <p>Fuí <span class="subr2">reconocida</span> periodista <strong>internacional</strong>. Distinguida por mi <span class="colo">trayectoria y membresía</span> en la <span class="backgr">FELAP</span> , cubriendo eventos <strong>nacionales</strong> de relevancia.</p>
           </div>
           <div class="fotos__item fotos__item-3">
-            <p>Fuí la <strong>voz nacional</strong> anunciando la <span class="subr2">apertura</span> de la <i>línea telefónica</i> <span class="backgr">144</span>, dedicada a la <span class="colo">violencia de género</span>.</p>
+            <p>Fuí la <strong>voz nacional</strong> anunciando la <span class="subr2">apertura</span> de la <i>línea telefónica</i> <span class="backgr">144</span> , dedicada a la <span class="colo">violencia de género</span>.</p>
           </div>
           <div class="fotos__item fotos__item-4">
-            <p>Fuí mujer <span class="subr2">destacada</span>, reconocida por mi <strong>notable</strong> <i>contribución</i> en la <span class="colo">Provincia de Buenos Aires</span> en el año <span class="backgr">2014</span>.</p>
+            <p>Fuí mujer <span class="subr2">destacada</span>, reconocida por mi <strong>notable</strong> <i>contribución</i> en la <span class="colo">Provincia de Buenos Aires</span> en el año <span class="backgr">2014</span> .</p>
           </div>
           <div class="fotos__item fotos__item-5">
-            <p>Aquí me entregaron el <span class="backgr">diploma</span> en <span class="subr2">reconocimiento</span> por mi <i>labor</i> en la <strong>inclusión</strong> de personas con <span class="colo">discapacidad</span>.</p>
+            <p>Aquí me entregaron el <span class="backgr">Diploma</span> en <span class="subr2">reconocimiento</span> por mi <i>labor</i> en la <strong>inclusión</strong> de personas con <span class="colo">discapacidad</span>.</p>
           </div>
         </div>
       </div>
