--- a/index.html
+++ b/index.html
@@ -138,23 +138,51 @@
           <a href="#videos"><span></span></a>
         </div>
       </div>
+      <div>
+        <svg
+        class="waves"
+        viewBox="0 24 150 28"
+        preserveAspectRatio="none"
+        shape-rendering="auto"
+        >
+      <defs>
+        <path
+        id="gentle-wave"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+      </defs>
+      <g class="parallax">
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(0, 174, 184,0.7)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(0, 174, 184,0.5)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(0, 174, 184,0.3)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="7"
+          fill="rgb(0, 174, 184)"
+          />
+      </g>
+      </svg>
+      </div>
     </section>
 
     <!-- Sección Videos -->
     <section id="videos" class="videos">
-      <div class="custom-shape-divider-top-1684286448">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path
-            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-            opacity=".25" class="shape-fill"></path>
-          <path
-            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-            opacity=".5" class="shape-fill"></path>
-          <path
-            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-            class="shape-fill"></path>
-        </svg>
-      </div>
       <div class="videos__cont-contenido">
         <div class="videos__cont-titulo">
           <h2 class="videos__titulo">Videos</h2>
@@ -211,18 +239,47 @@
           </div>
         </div>
       </div>
-      <div class="custom-shape-divider-bottom-1684286415">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path
-            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-            opacity=".25" class="shape-fill"></path>
-          <path
-            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-            opacity=".5" class="shape-fill"></path>
-          <path
-            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-            class="shape-fill"></path>
-        </svg>
+
+      <div>
+        <svg
+        class="waves"
+        viewBox="0 24 150 28"
+        preserveAspectRatio="none"
+        shape-rendering="auto"
+        >
+      <defs>
+        <path
+        id="gentle-wave"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+      </defs>
+      <g class="parallax">
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(255, 255, 255,0.7)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(255, 255, 255,0.5)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(255, 255, 255,0.3)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="7"
+          fill="rgb(255, 255, 255)"
+          />
+      </g>
+      </svg>
       </div>
     </section>
 
@@ -309,11 +366,55 @@
           </div>
         </div>
       </div>
+      <div>
+        <svg
+        class="waves"
+        viewBox="0 24 150 28"
+        preserveAspectRatio="none"
+        shape-rendering="auto"
+        >
+      <defs>
+        <path
+        id="gentle-wave"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+      </defs>
+      <g class="parallax">
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(241, 242, 246,0.7)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(241, 242, 246,0.5)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(241, 242, 246,0.3)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="7"
+          fill="rgb(241, 242, 246)"
+          />
+      </g>
+
+
+
+      </svg>
+      </div>
     </section>
 
     <!-- Sección Audioteca -->
     <section id="audioteca" class="audioteca">
-      <div class="custom-shape-divider-top-1684521817">
+      <!-- <div class="custom-shape-divider-top-1684521817">
         <div class="custom-shape-divider-top-1684522749">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
             <path
@@ -327,7 +428,7 @@
               class="shape-fill"></path>
           </svg>
         </div>
-      </div>
+      </div> -->
       <div class="audioteca__texto">
         <div class="videos__cont-titulo">
           <h2 class="videos__titulo">Audioteca</h2>
@@ -372,7 +473,7 @@
           <audio src="./audio/c3.mp3" controls></audio>
         </div>
       </div>
-      <div class="custom-shape-divider-bottom-1684523877">
+      <!-- <div class="custom-shape-divider-bottom-1684523877">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
           <path
             d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
@@ -384,6 +485,50 @@
             d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
             class="shape-fill"></path>
         </svg>
+      </div> -->
+      <div>
+        <svg
+        class="waves"
+        viewBox="0 24 150 28"
+        preserveAspectRatio="none"
+        shape-rendering="auto"
+        >
+      <defs>
+        <path
+        id="gentle-wave"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+      </defs>
+      <g class="parallax">
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(255, 255, 255,0.7)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(255, 255, 255,0.5)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(255, 255, 255,0.3)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="7"
+          fill="rgb(255, 255, 255)"
+          />
+      </g>
+
+
+
+      </svg>
       </div>
     </section>
 
@@ -521,19 +666,51 @@
 
       </div>
 
-      <div class="custom-shape-divider-bottom-1684252060">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path
-            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-            opacity=".25" class="shape-fill"></path>
-          <path
-            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-            opacity=".5" class="shape-fill"></path>
-          <path
-            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-            class="shape-fill"></path>
-        </svg>
+      <div>
+        <svg
+        class="waves"
+        viewBox="0 24 150 28"
+        preserveAspectRatio="none"
+        shape-rendering="auto"
+        >
+      <defs>
+        <path
+        id="gentle-wave"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+      </defs>
+      <g class="parallax">
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(0, 174, 184,0.7)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(0, 174, 184,0.5)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(0, 174, 184,0.3)"
+          />
+          <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="7"
+          fill="rgb(0, 174, 184)"
+          />
+      </g>
+
+
+
+      </svg>
       </div>
+
     </section>
   </main>
   <footer class="footer">
