--- a/index.html
+++ b/index.html
@@ -650,8 +650,8 @@
           </div>
         </a>
 
-        <a class="card--9" href="./img/ad-9.jpg" data-lightbox="publi" data-title="Multiplex Palmas Del Pilar">
-          <img src="./img/ad-9.jpg" class="img" alt="Multiplex Palmas Del Pilar">
+        <a class="card--9" href="./img/ad-9.png" data-lightbox="publi" data-title="Multiplex Palmas Del Pilar">
+          <img src="./img/ad-9.png" class="img" alt="Multiplex Palmas Del Pilar">
 
           <div class="text">
             <p class="h3"> Multiplex Palmas Del Pilar </p>
