Se termina animaciones

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
   <main>
     <!-- Sección Portada -->
     <section class="portada">
-      <div class="portada__cont-type">
+      <div data-aos="zoom-in" class="portada__cont-type">
         <h2>Yo soy <span class="portada__multitext"></span></h2>
       </div>
       <blockquote class="portada__cont-frase-quote">
-        <span class="portada__frase">De la conducta de <span>uno</span> depende el futuro de <span>todos</span></span>
-        <span class="portada__quote">⎯ Alejandro Magno</span>
-        <span class="portada__comillas">"</span>
+        <span data-aos="zoom-in" class="portada__frase">De la conducta de <span>uno</span> depende el futuro de <span>todos</span></span>
+        <span data-aos="zoom-in" class="portada__quote">⎯ Alejandro Magno</span>
+        <span data-aos="zoom-in" class="portada__comillas">"</span>
       </blockquote>
       <a href="#about-us" class="portada__te-invito"><span class="inside-text">Te invito a recorrer mi blog</span></a>
       <a href="#about-us" class="portada__arrow-container">
@@ -106,15 +106,26 @@
           </div>
         </div>
         <div class="about__text">
-          <h2 class="about__title">Sobre Mí</h2>
-          <h5><span class="about__vineta">❖</span>Me dicen <span class="hero__span">Chispita</span></h5>
-          <p>Esta página es un pedacito de mi <strong>esencia</strong> que quiero compartir con <strong>vos</strong>.
+          <h2 data-aos="fade-right"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine" class="about__title">Sobre Mí</h2>
+          <h5 data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="300"
+          data-aos-offset="0"><span class="about__vineta">❖</span>Me dicen <span class="hero__span">Chispita</span></h5>
+          <p data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="300"
+          data-aos-offset="0">Esta página es un pedacito de mi <strong>esencia</strong> que quiero compartir con <strong>vos</strong>.
             Aquí vas a encontrar un <i>recorrido visual</i> por mi trayectoria, donde las fotografías y los videos capturan
             algunos de mis momentos <strong>especiales</strong> y <strong>emotivos</strong>. Es un lugar donde vas a
             poder adentrarte en mi <i>mundo</i>, conocerme un poco más y descubrir las <strong>pasiones</strong> que me
             <strong>impulsan</strong> en cada paso que doy frente al micrófono y la vida.
           </p>
-          <div class="about__cont-btn-texto">
+          <div data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="500"
+          data-aos-offset="0" class="about__cont-btn-texto">
             <a class="btn" href="https://www.facebook.com/2103664716449476/videos/797244574863691"
               target="_blank">Escuchame en <i class="fa fa-facebook"></i></a>
             <span>Todos los <strong>jueves</strong> desde las 12:00hs hasta las 14:00hs por Radio Más Pilar <strong>FM
@@ -185,7 +196,7 @@
     <section id="videos" class="videos">
       <div class="videos__cont-contenido">
         <div class="videos__cont-titulo">
-          <h2 class="videos__titulo">Videos</h2>
+          <h2  class="videos__titulo">Videos</h2>
         </div>
         <img class="videos__sticker-adri" src="./img/sticker-1.png" alt="Sticker Adri tomando cafe">
         <div class="videos__cont-vid">
@@ -292,7 +303,9 @@
       <span class="fotos__dicho">"Cada foto es un fragmento de <span>tiempo</span> suspendido, una
         <span>pincelada</span> más en el lienzo..."</span>
       <div class="fotos__fondo-cubo">
-        <div class="fotos__wrapper">
+        <div  data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-duration="1500" class="fotos__wrapper">
           <div class="fotos__box-area">
             <div class="fotos__box1">
               <img src="./img/adri-con-facu.jpeg" alt="Adriana Garcia junto a Facundo Zech">
@@ -333,7 +346,8 @@
           </div>
         </div>
       </div>
-      <div class="fotos__cont-subtitulo">
+      <div data-aos="zoom-in"
+      data-aos-easing="ease-in-sine" class="fotos__cont-subtitulo">
         <h3>Carrousel de fotos</h3>
         <span>Seleccioná una para leer su descripción</span>
       </div>
@@ -412,10 +426,15 @@
     <!-- Sección Audioteca -->
     <section id="audioteca" class="audioteca">
       <div class="audioteca__texto">
-        <div class="videos__cont-titulo">
+        <div data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="500"
+        data-aos-offset="0" class="videos__cont-titulo">
           <h2 class="videos__titulo">Audioteca</h2>
         </div>
-        <div class="audioteca__cont-img-texto">
+        <div data-aos="fade-up"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine" class="audioteca__cont-img-texto">
           <article class="audioteca__article">
             <img class="audioteca__article-img" src="./img/libro-mano.png" alt="Una persona teniendo un libro">
             <h3 class="audioteca__article-h3">Llegaste a mi sección de cuentos</h3>
@@ -501,7 +520,10 @@
 
     <!-- Seccion Publicidades -->
     <section id="publicidad" class="publicidad">
-      <div class="videos__cont-titulo">
+      <div data-aos="fade-zoom-in"
+      data-aos-easing="ease-in-back"
+      data-aos-delay="500"
+      data-aos-offset="0" class="videos__cont-titulo">
         <h2 class="videos__titulo">Publicidad</h2>
       </div>
       <img class="publicidad__fondo-chispas" src="./img/back-publ.png" alt="Fondo de chispas">
